Allow moderation reports to be updated
